iphone scrollbar fix

--- a/public/movie/css/movie.css
+++ b/public/movie/css/movie.css
@@ -12,13 +12,16 @@ body {
 /* Track */
 ::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px grey;
+    -webkit-box-shadow: inset 0 0 5px grey;
     border-radius: 10px;
+    -webkit-border-radius: 10px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
     background: var(--primary-light);
     border-radius: 10px;
+    -webkit-border-radius: 10px;
 }
 
 /* Handle on hover */
