--- a/public/movie/css/responsive.css
+++ b/public/movie/css/responsive.css
@@ -5,6 +5,24 @@
         font-size: 14px;
     }
 
+    ::-webkit-scrollbar {
+        width: 1px;
+        height: 3px;
+    }
+
+    ::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.4);
+        border-radius: 2px;
+        -webkit-border-radius: 2px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        -webkit-border-radius: 2px;
+        border-radius: 2px;
+        background: rgba(100, 100, 100, 0.8);
+        -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.5);
+    }
+
     .m-wrap-footer {
         flex-direction: column;
 
